--- a/2020/20200920.md
+++ b/2020/20200920.md
@@ -1,2 +1,4 @@
+# Sep 20, 2020
 - How to write an efficient caesar_cipher using dictionary for translation/mapping characters.
- - https://gist.github.com/arjun921/e518066768da06f3a69c17a7ce3f00e9
+  - https://gist.github.com/arjun921/e518066768da06f3a69c17a7ce3f00e9
+- Dropout can be used with when validation accuracy starts deviating away from training accurracy to see if it helps improve the validation accuracy.
