--- a/2020/20200920.md
+++ b/2020/20200920.md
@@ -2,3 +2,8 @@
 - How to write an efficient caesar_cipher using dictionary for translation/mapping characters.
   - https://gist.github.com/arjun921/e518066768da06f3a69c17a7ce3f00e9
 - Dropout can be used with when validation accuracy starts deviating away from training accurracy to see if it helps improve the validation accuracy.
+- Re-learned how to do transfer learning the right way
+- Learnt how to select a layer, append new layers and train the model with transfer learning
+- Learnt how to do data augmentation
+- Learnt how to use droppout 
+- How to freeze a layer from retraining  -- `layer.trainable=False`
