--- a/2020/20200920.md
+++ b/2020/20200920.md
@@ -7,3 +7,4 @@
 - Learnt how to do data augmentation
 - Learnt how to use droppout 
 - How to freeze a layer from retraining  -- `layer.trainable=False`
+- What is batch normalization [src](https://www.youtube.com/watch?v=dXB-KQYkzNU)
